--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write \"src/**/*.+(js|ts|tsx|scss)\""
   },
   "repository": {
     "type": "git",
@@ -27,8 +28,11 @@
     "dotenv-webpack": "^1.7.0",
     "firebase": "^7.9.3",
     "formik": "^2.1.4",
+    "husky": "^4.2.3",
     "next": "^9.2.2",
     "node-sass": "^4.13.1",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^6.0.0",
@@ -42,5 +46,10 @@
   "devDependencies": {
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
