move static labels to env

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
+    "heroku-postbuild": "npm run build",
     "format": "prettier --write \"src/**/*.+(js|ts|tsx|scss)\""
   },
   "repository": {
