--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
+    "dev:local": "npm-run-all --parallel backend dev",
+    "backend": "NODE_ENV=development node server.js",
     "build": "next build",
     "start": "next start",
     "export": "next export",
@@ -27,13 +29,17 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "emoji-mart": "^2.11.2",
+    "express": "^4.17.1",
     "firebase": "^7.9.3",
     "formik": "^2.1.4",
     "husky": "^4.2.3",
     "next": "^9.2.2",
     "node-sass": "^4.13.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "react": "^16.13.0",
