--- a/package.json
+++ b/package.json
@@ -52,9 +52,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "stream-chat-react": "^0.8.5",
-    "yup": "^0.28.1"
-  },
-  "devDependencies": {
+    "yup": "^0.28.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.3"
   },
