--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:local": "npm-run-all --parallel backend dev",
     "backend": "NODE_ENV=development node server.js",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start": "NODE_ENV=production next start -p $PORT",
     "export": "next export",
     "format": "prettier --write \"src/**/*.+(js|ts|tsx|scss)\""
   },
