--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "type": "git",
     "url": "git@git.geekyants.com:products/nextjs-typescript-firebase.git"
   },
+  "engines": {
+    "node": "12.11.1"
+  },
   "author": "Taras Kumpanenko <taras.kumpanenko@gmail.com> ",
   "license": "ISC",
   "dependencies": {
@@ -32,11 +35,11 @@
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "emoji-mart": "^2.11.2",
-    "express": "^4.17.1",
+    "express": "4.17.1",
     "firebase": "^7.9.3",
     "formik": "^2.1.4",
     "husky": "^4.2.3",
-    "next": "^9.2.2",
+    "next": "9.2.2",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
