move firebase config to env file

--- a/.env.build
+++ b/.env.build
@@ -16,3 +16,11 @@ CONTENT_IMG_HREF_2="#"
 CONTENT_IMG_HREF_3="#"
 CONTENT_CHAT_TITLE="CHAT title"
 CONTENT_CHAT_AVATAR="https://cdn.chrisshort.net/testing-certificate-chains-in-go/GOPHER_MIC_DROP.png"
+
+FIREBASE_API_KEY="AIzaSyBb0--6EL3IyFtvA08t9akw8frWBggZzyQ"
+FIREBASE_AUTH_DOMAIN="tribesocial-a13fb.firebaseapp.com"
+FIREBASE_DATABASE_URL="https://tribesocial-a13fb.firebaseio.com"
+FIREBASE_PROJECTID="tribesocial-a13fb"
+FIREBASE_STORAGEBUCKET="tribesocial-a13fb.appspot.com",
+FIREBASE_MESSAGINGSENDERID="736494109878",
+FIREBASE_APPID="1:736494109878:web:dac83729db2ddfe78d5217"
