--- a/.env.build
+++ b/.env.build
@@ -14,7 +14,8 @@ CONTENT_IMG_3="https://dummyimage.com/640x4:3"
 CONTENT_IMG_HREF_1="#"
 CONTENT_IMG_HREF_2="#"
 CONTENT_IMG_HREF_3="#"
-CONTENT_CHAT_TITLE="CHAT title"
+CONTENT_CHAT_ID="chat-2"
+CONTENT_CHAT_TITLE="CHAT title builddd"
 CONTENT_CHAT_AVATAR="https://cdn.chrisshort.net/testing-certificate-chains-in-go/GOPHER_MIC_DROP.png"
 
 FIREBASE_API_KEY="AIzaSyBb0--6EL3IyFtvA08t9akw8frWBggZzyQ"
