--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "type": "git",
     "url": "git@git.geekyants.com:products/nextjs-typescript-firebase.git"
   },
-  "engines": {
-    "node": "12.11.1"
-  },
   "author": "Taras Kumpanenko <taras.kumpanenko@gmail.com> ",
   "license": "ISC",
   "dependencies": {
@@ -32,6 +29,7 @@
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
+    "date-fns": "^2.11.0",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "emoji-mart": "^2.11.2",
@@ -46,6 +44,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-file-utils": "0.3.13",
+    "react-jw-player": "^1.19.1",
     "react-loader": "^2.4.7",
     "react-redux": "^6.0.0",
     "react-spinners": "^0.4.8",
@@ -54,9 +53,9 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "stream-chat-react": "^0.8.5",
-    "yup": "^0.28.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "yup": "^0.28.1"
   },
   "husky": {
     "hooks": {
