--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "cookies-js": "^1.2.3",
     "cors": "^2.8.5",
     "date-fns": "^2.11.0",
     "dotenv": "^8.2.0",
@@ -36,6 +37,7 @@
     "firebase": "^7.9.3",
     "formik": "^2.1.4",
     "husky": "^4.2.3",
+    "js-cookie": "^2.2.1",
     "next": "9.2.2",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
