create base for access components

--- a/.env.build
+++ b/.env.build
@@ -17,6 +17,7 @@ CONTENT_IMG_HREF_3="#"
 CONTENT_CHAT_ID="chat-2"
 CONTENT_CHAT_TITLE="CHAT title builddd"
 CONTENT_CHAT_AVATAR="https://cdn.chrisshort.net/testing-certificate-chains-in-go/GOPHER_MIC_DROP.png"
+ACCESS_CODE="WWWES2020"
 
 FIREBASE_API_KEY="AIzaSyBb0--6EL3IyFtvA08t9akw8frWBggZzyQ"
 FIREBASE_AUTH_DOMAIN="tribesocial-a13fb.firebaseapp.com"
