--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-file-utils": "0.3.13",
+    "react-horizontal-scrolling-menu": "^0.7.7",
     "react-jw-player": "^1.19.1",
     "react-loader": "^2.4.7",
     "react-redux": "^6.0.0",
