make facebook optional

--- a/.env.build
+++ b/.env.build
@@ -26,3 +26,5 @@ FIREBASE_PROJECTID="tribesocial-a13fb"
 FIREBASE_STORAGEBUCKET="tribesocial-a13fb.appspot.com",
 FIREBASE_MESSAGINGSENDERID="736494109878",
 FIREBASE_APPID="1:736494109878:web:dac83729db2ddfe78d5217"
+
+FACEBOOK_AUTH_ENABLED=TRUE
