--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^16.13.0",
     "react-file-utils": "0.3.13",
     "react-horizontal-scrolling-menu": "^0.7.7",
+    "react-id-swiper": "^3.0.0",
     "react-jw-player": "^1.19.1",
     "react-loader": "^2.4.7",
     "react-redux": "^6.0.0",
@@ -57,6 +58,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "stream-chat-react": "^0.8.5",
+    "swiper": "^5.3.6",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.3",
     "yup": "^0.28.1"
