--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "emoji-mart": "^2.11.2",
+    "es6-promise": "^4.2.8",
     "firebase": "^7.9.3",
     "formik": "^2.1.4",
     "husky": "^4.2.3",
+    "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "next": "9.2.2",
     "node-sass": "^4.13.1",
