--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-redux": "^6.0.0",
     "react-spinners": "^0.4.8",
     "reactfire": "2.0.0-rc.1",
+    "reactstrap": "^8.4.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
