--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Live streaming app",
   "main": "index.js",
+  "engines": {
+    "node": ">11.0.0"
+  },
   "scripts": {
     "dev": "next",
     "dev:local": "npm-run-all --parallel backend dev",
