--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "stream-chat-react": "^0.8.5",
+    "sanitize-html-react": "^1.13.0",
+    "stream-chat-react": "1.1.2",
     "swiper": "^5.3.6",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.3",
