--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tribesocial",
-  "version": "1.0.65",
+  "version": "1.0.70",
   "description": "Live streaming app",
   "main": "index.js",
   "engines": {
@@ -74,8 +74,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged",
-      "post-commit": "npm run upgrage-version"
+      "pre-commit": "pretty-quick --staged; npm run upgrage-version"
     }
   }
 }
