--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tribesocial",
-  "version": "1.0.71",
+  "version": "1.0.74",
   "description": "Live streaming app",
   "main": "index.js",
   "engines": {
@@ -15,7 +15,9 @@
     "start": "NODE_ENV=production next start -p $PORT",
     "export": "next export",
     "format": "prettier --write \"src/**/*.+(js|ts|tsx|scss)\"",
-    "upgrage-version": "npm --no-git-tag-version version patch; git commit -n -a -m \"update version\""
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "npm run lint -- --fix",
+    "upgrage-version": "npm --no-git-tag-version version patch; git add ."
   },
   "repository": {
     "type": "git",
@@ -43,13 +45,11 @@
     "es6-promise": "^4.2.8",
     "firebase": "^7.9.3",
     "formik": "^2.1.4",
-    "husky": "^4.2.3",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "next": "9.2.2",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -68,7 +68,21 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged; npm run upgrage-version"
+      "pre-commit": "npm run upgrage-version && lint-staged"
     }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": "npm run lint:fix"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5"
   }
 }
