Feature/cloud functions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tribesocial",
-  "version": "1.0.82",
+  "version": "1.0.86",
   "description": "Live streaming app",
   "main": "index.js",
   "engines": {
@@ -17,7 +17,8 @@
     "format": "prettier --write \"src/**/*.+(js|ts|tsx|scss)\"",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "npm run lint -- --fix",
-    "upgrage-version": "npm --no-git-tag-version version patch; git add ."
+    "upgrage-version": "npm --no-git-tag-version version patch; git add .",
+    "firebase-function:deploy": "firebase deploy --only functions"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "author": "Taras Kumpanenko <taras.kumpanenko@gmail.com> ",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@types/next": "^7.0.6",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
@@ -43,6 +45,7 @@
     "emoji-mart": "^2.11.2",
     "es6-promise": "^4.2.8",
     "firebase": "^7.9.3",
+    "firebase-admin": "^8.12.1",
     "formik": "^2.1.4",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
@@ -52,6 +55,7 @@
     "pretty-quick": "^2.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-dropzone": "^11.0.1",
     "react-file-utils": "0.3.13",
     "react-loader": "^2.4.7",
     "react-redux": "^6.0.0",
